[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GraviGun.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.601563, 0.990662, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=4]
resource_name = "shot"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 1000 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emission_sphere_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5.0, 15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bullet:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CPUParticles2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[node name="Gravigun" type="Area2D"]
modulate = Color( 1, 2, 2, 1 )
collision_layer = 0
collision_mask = 2147483650
script = ExtResource( 1 )

[node name="bullet" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
amount = 25
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
angular_velocity = 5.0
angular_velocity_random = 1.0
angle = 45.0
angle_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shot = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.21541e-08, 5.4948e-08 )
scale = Vector2( 0.2, 0.2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_GraviGun_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
